--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  
+  background-image: linear-gradient(to left top, #ff0091, #f000a8, #db1bc0, #bc32d6, #9245ea, #6c66f9, #407eff, #0091ff, #00b1ff, #00ccff, #00e5fd, #5ffbf1);  background-repeat: no-repeat;
+  background-size:cover;
 }
