--- a/src/CreateTodoButton.css
+++ b/src/CreateTodoButton.css
@@ -22,4 +22,5 @@
     -moz-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -o-transform: rotate(360deg);
+    cursor: pointer;
 }
